<resources>
    <string name="app_name">Life Saver</string>
    <string name="use_a_social_platform_to_login">Use a Social Platform to Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enter_your_password_here">Enter your password here..</string>
    <string name="enter_your_email_here">Enter your email here..</string>
    <string name="uber_on_mission_to_save_lives">Uber On Mission to Save Lives !!</string>
    <string name="driver_application">Driver Application</string>
    <string name="life_saver">Life Saver</string>
    <string name="uber_ambulance">Uber Ambulance</string>
    <string name="uber_ambulance_services">Sign Up For Driver</string>
    <string name="sign_up_for_driver">Sign Up</string>
    <string name="enter_your_email_for_driverSignup">Enter your Email here..</string>
    <string name="enter_phone_number_ForDriver">Enter phone number here..</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="login_for_driver_in_signup">Login</string>
    <string name="sign_up_for_user">Sign Up For User</string>
    <string name="user">User</string>
    <string name="driver">Driver</string>
    <string name="google_maps_key">AIzaSyBAzKUP_0XaQBfs-qCqnRWAMkd4KwnHtfU</string>

    <string-array name="languages">
        <item>Basic Life Support</item>
        <item>Advanced Life Support</item>
        <item>Emergency Life Support</item>
    </string-array>
</resources>