<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Logins.LoginPageDriver">

    <TextView
        android:id="@+id/lifesaver"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:text="@string/app_name"
        android:textSize="27sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/DriverApp"
        android:layout_below="@+id/lifesaver"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="20dp"
        android:text="@string/driver_application"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/UberOnMission"
        android:layout_below="@+id/DriverApp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:text="@string/uber_on_mission_to_save_lives"
        android:textSize="18sp"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/username"
        android:layout_below="@id/UberOnMission"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:paddingLeft="10dp"
        android:background="@drawable/roundbackground"
        android:hint="@string/enter_your_email_here"
        android:textColorHint="#A19D9D"
        android:textSize="14sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/password"
        android:layout_below="@id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:paddingLeft="10dp"
        android:background="@drawable/roundbackground"
        android:hint="@string/enter_your_password_here"
        android:textColorHint="#A19D9D"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/DontHaveAccount"
        android:layout_below="@id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/CreateAccountDriver"
        android:layout_below="@id/DontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/login_for_driver"
        android:layout_below="@+id/password"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="240dp"
        app:backgroundTint="@color/teal_200"
        android:background="@drawable/btnroundbg"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/ForgotPassword"
        android:layout_below="@id/CreateAccountDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="110dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/SocialPlatform"
        android:layout_below="@id/ForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="90dp"
        android:text="@string/use_a_social_platform_to_login"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/googleDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/google"
        android:layout_below="@id/SocialPlatform"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/roundbackground" />


</RelativeLayout>